[FIX] mail: better size for chat window im status
Before this commit, the size of im status in chat window
was too big, making the avatar hard to see and also it overlaps
with the bottom of chat window header.

This comes from avatar being small, and the IM status is using the
default `md` size, which makes it too big.

This commit fixes the issue by using `sm` size for better size.
The position of IM status as been adjusted as a consequence, and
also the around master + "..." typing status have been adjusted
to take into account the smaller version of IM status.

X-original-commit: 4b54d72397f0a3bb7c0c45fff6e5a4932626a800

--- a/addons/mail/static/src/core/common/im_status.scss
+++ b/addons/mail/static/src/core/common/im_status.scss
@@ -7,8 +7,8 @@
     }
 
     &.o-sm i {
-        width: $font-size-sm;
-        height: $font-size-sm;
+        width: 0.65rem; // matches .o-xsmaller
+        height: 0.65rem;
     }
 
     .o-away {
